--- a/la-crime.qmd
+++ b/la-crime.qmd
@@ -14,6 +14,14 @@ library(janitor)
 library(ggthemes)
 library(scales)
 library(plotly)
+## Map Data
+library(mapdata)
+library(maps)
+library(stringr)
+library(viridis)
+library(sf)
+library(rnaturalearth)
+library(ggmagnify)
 ```
 
 
@@ -28,14 +36,19 @@ la_crime <- raw_data |>
     date_reported = mdy_hms(date_rptd), 
     date_occurred = mdy_hms(date_occ),
     crime_description = crm_cd_desc,
-    year_occurred = year(date_occurred)
+    year_occurred = year(date_occurred),
+    latitude_unavg = lat,
+    longitude_unavg = lon
   ) |>
   select(
     date_reported,
     date_occurred,
     year_occurred,
     crime_description,
-    premis_desc
+    premis_desc,
+    latitude_unavg,
+    longitude_unavg,
+    area_name
   )
 
 raw_data
@@ -44,6 +57,165 @@ la_crime
 ```
 
 ## Analysis and Visualization
+
+### Data Wrapper Attempt -- LA Crime, Location 2024
+
+```{r}
+#| label: Location Merge
+
+la_plot <- la_crime |>
+  filter(
+    year_occurred == "2024"
+  ) |>
+  group_by(
+    area_name,
+    crime_description
+  ) |>
+  mutate(
+    area_count = str_count(unique(area_name, ", ")),
+    crime_description = str_wrap(crime_description, width = 20)
+  ) |>
+  summarize(
+    incident_count = sum(area_count, na.rm = TRUE),
+    longitude = mean(longitude_unavg, na.rm = TRUE),
+    latitude = mean(latitude_unavg, na.rm = TRUE),
+    .groups = "drop"
+  ) |>
+  arrange(
+    desc(incident_count)
+  ) |>
+  head(50)
+  
+la_plot
+```
+
+
+```{r}
+#| label: Datawrapper
+
+la_plot |>
+  write_csv("02-clean/la-crime.csv")
+```
+
+#### State Import
+
+```{r}
+#| label: county/state coords
+
+california <- map_data("state") |>
+  filter(
+    region == "california"
+  )
+
+la_county <- map_data("county") |>
+  filter(
+    region == "california",
+    subregion == "los angeles"
+  )
+```
+
+```{r}
+#| label: ggplot version
+
+california_base <- ggplot() +
+  geom_polygon(
+    data = california,
+    aes(
+      x = long,
+      y = lat,
+    ),
+    color = "black",
+    fill = "cornflowerblue"
+  ) +
+  coord_quickmap()
+
+cala_plot <- california_base +
+  geom_polygon(
+    data = la_county,
+    aes(
+      x = long,
+      y = lat,
+    ),
+    color = "black",
+    fill = "white"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.title = element_blank(),
+    axis.text = element_blank(),
+    legend.title = element_text(size = 8),
+    legend.text = element_text(size = 6),  # Adjust legend text size
+    legend.key.width = unit(1, "cm"),  # Widen legend items
+    plot.title.position = "plot",  # Align title/subtitle properly
+    legend.box = "horizontal"
+  ) +
+  coord_quickmap()
+
+cala_plot
+```
+#### Zoom
+
+```{r}
+#| label: la plot
+
+la_plot <- ggplot() +
+  geom_polygon(
+    data = la_county,
+    aes(
+      x = long,
+      y = lat,
+    ),
+    fill = "white",
+    color = "gray"
+  ) +
+  geom_point(
+    data = la_plot,
+    alpha = 0.5,
+    aes(
+      x = longitude,
+      y = latitude,
+      size = incident_count,
+      color = crime_description
+    )
+  ) +
+  scale_size_continuous(range = c(1,10)) +
+  coord_cartesian(
+      xlim = c(-119, -118.5), 
+      ylim = c(33.7, 34.2)
+  ) +
+  coord_quickmap() +
+  labs(
+    title = str_wrap("Top 50 Incident Locations in Los Angeles in 2024"),
+    subtitle = str_wrap("Chart created by Meredith Roberts for the Data Visualization Independent Study."),
+    caption = "Source: City of Los Angeles",
+    x = "Longitude",
+    y = "Latitude",
+    size = "Incident Count",
+    color = "Type of Crime"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.title = element_blank(),
+    axis.text = element_blank(),
+    legend.title = element_text(size = 8),
+    legend.text = element_text(size = 6),  # Adjust legend text size
+    legend.key.width = unit(1, "cm"),  # Widen legend items
+    plot.title.position = "plot",  # Align title/subtitle properly
+    legend.box = "horizontal"
+  )
+
+from <- c(xmin = -119, xmax = -118, ymin = 33.7, ymax = 34.5)
+# Names xmin, xmax, ymin, ymax are optional:
+to <- c(3 - 1, 3 + 1,1, 2) ## UGH NOTHING WORKSSS
+
+la_plot + geom_magnify(from = from, to = to)
+```
+Map of Los Angeles County: https://maps.app.goo.gl/LNF9MwwGZaaBmdQE6
+
+Revised Analysis:
+In 2024, one of the most prevalent crimes in Los Angeles was car theft, with hot spots around downtown LA, Santa Monica and Canoga Park, above Topanga State Park. Santa Monica was also a hot spot for petty and grand theft, around Venice Beach and the Los Angeles airport. Northern LA County, which includes Santa Clarita and Lancaster, is untouched in regards to top 50 areas and type of crime of 2024.
+
+### Type of Crime, Graph
 
 ```{r}
 #| label: type of crime
