--- a/about.qmd
+++ b/about.qmd
@@ -2,6 +2,19 @@
 title: "About"
 ---
 
+### Revised Assignment #1:
+
+### Revised Analyses:
+
+1. Border Crossing Entry Data, Analysis
+  - As reflected by the country border crossing data, the Mexico-America border has much more traffic than the Canada-America border. Most ports are visited between 1,000 and 2,000 times per year, with an exception of many ports in the North. New York sees a lot of border entry instances and quantity of crossing into the United States. Texas and California receive the most border entries of any other state.
+  - Traffic seems to be highly concentrated on a few ports in each border state. There is heavy pedestrian and personal vehicle traffic in Texas, California and New York. States in the Midwest get virtually no traffic in comparison to the South or New York and Washington.
+2. Most Popular Baby Names in New York City, Analysis
+  - Emma remained the most popular name in New York City between 2017 and 2021, a much longer spot at the top than the three other names. Although Emma is the most popular, the general popularity of popular baby names has steadily declined since 2013. In 2021 over 400 babies were named Emma, but this pales in comparison to over 600 Sophias in 2013.
+  - Unlike female baby names, male baby names are more consistent. Liam remained the most popular baby name for six years, from 2016 to 2021. The lowest number of babies named the most popular name was in 2020 with 676 Liams, and the highest number was in 2011 with 822 Jaydens. Male baby names are far more popular in quantity than female names.
+3. Crime in Los Angeles, Analysis
+  -  2024, one of the most prevalent crimes in Los Angeles was car theft, with hot spots around downtown LA, Santa Monica and Canoga Park, above Topanga State Park. Santa Monica was also a hot spot for petty and grand theft, around Venice Beach and the Los Angeles airport. Northern LA County, which includes Santa Clarita and Lancaster, is untouched in regards to top 50 areas and type of crime of 2024.
+
 ### Assignment #1:
 
 -  *Analyze three different (simple) datasets in RStudio*
@@ -22,3 +35,5 @@ I analyzed three different datasets from https://data.gov/.
   - On a different note, regarding male baby names, it seems to be more popular to name babies the most popular name of the year. This is a strong          comparison from almost 450 babies named Liam in 2021 and under 200 named Esther. 
 3. Crime in Los Angeles, Analysis
   - The most frequent crimes in Los Angeles are non-violent, with an exception of assault and battery. As of 2024, crime in Los Angeles, on all fronts,     is declining. Interestingly, in 2022, identity theft was the second most frequent crime, with over 22,000 occurrences. Stolen vehicles have remained     at the top of the list over all four years, and it saw a slight peak of almost 25,000 occurrences, also in 2022.
+  
+  
